Add Entities and configuration DbContext and Conecction to DataBase

--- a/Biblioteca_API/appsettings.json
+++ b/Biblioteca_API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-I4MV156;Database=BibliotecaDB;UID=sa;PWD=5660017A*;Command Timeout=3600;Trusted_Connection=True; TrustServerCertificate=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
